--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CS193X Final Project",
   "main": "server.js",
   "engines": {
-    "node": "8x"
+    "node": ">=8.0.0 <11.0.0" 
   },
   "dependencies": {
     "body-parser": "^1.17.1",
